# -Todo-Phase-II-FullStack-WebApplication-Hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
.claude/: settings.local.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_04_00_00_0001_initial.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: __init__.py  auth.py  todos.py
backend/src/api/schemas/: todo.py  user.py
backend/src/config/: database.py  settings.py
backend/src/models/: todo.py  user.py
backend/src/services/: auth_service.py  todo_service.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/playwright-report/: index.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/todos/: page.tsx
frontend/src/app/todos/components/: CreateTodoForm.tsx  EmptyState.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/components/auth/: SigninForm.tsx  SignupForm.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Toast.tsx
frontend/src/lib/api/: auth.ts  todos.ts
frontend/tests/: example.spec.ts  signin.spec.ts  todo-crud.spec.ts
history/prompts/1-phase2-fullstack/: 001-phase2-implementation-green.prompt.md
specs/1-phase2-fullstack/: IMPLEMENTATION_SUMMARY.md  plan.md  research.md  spec.md  tasks.md
specs/1-phase2-fullstack/checklists/: requirements.md
(+2 files in other folders)
